@@ -92,7 +92,7 @@
       exposed to the beam before the picture begins being recorded on the CCD camera. 
       This will minimize the effects of image drift when the beam first hits the 
       specimen.&nbsp; For a OneView camera, drift settling is achieved by throwing 
-      away initial camera frames andit thus works with one shutter connected.&nbsp; 
+      away initial camera frames and it thus works with one shutter connected.&nbsp; 
       However, if there are two shutters connected, the settling works only when the 
       &#39;Film shutter&#39; option described next is selected, so the box is disabled and the 
       settling value there will have no effect if the &#39;Beam shutter&#39; option is 
