@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+5/6/19: More DPI scaling in image drawing and stock dialog boxes.
+
+5/6/19: Added option for a numeric date-time at the start of frame file name.
+
 5/6/19: Fixed TiltDuringRecord not being allowed for a JEOL scope (In 3.7).
 
 4/24/19: Added checkbox for using diffraction mode in OneView/Rio.
